# dns-templar

./: .gitignore  README.md  fetch_data.py  requirements.txt  todo.txt
.github/workflows/: ci.yml  release.yml
data/raw/: tranco.csv
dns-templar-rs/: Cargo.toml  config.example.toml
dns-templar-rs/src/: blacklist.rs  classifier.rs  config.rs  features.rs  main.rs  model.rs  server.rs
dns-templar-rs/tests/: fixtures.json
logs/: dns-templar.log.2026-05-13  dns-templar.log.2026-05-14
models/: feature_cols.json  ngram_table.json  tld_freq.json  whitelist.txt
src/: build_features.py  explain.py  explore.py  export.py  features.py  fetch_data.py  generate_test_fixtures.py  train.py
