[package]
name = "dns-templar-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tract-onnx = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "time"] }
hickory-proto = "0.26"
colored = "3"
toml = "1"